|
Quick Lists
|
|
Bug ID:
|
6807084
|
|
Votes
|
0
|
|
Synopsis
|
AutoBox elimination is broken with compressed oops
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs15(b03),
hs14(b12) (Bug ID:2173504)
, 6u14(b03) (Bug ID:2174072)
, 7(b51) (Bug ID:2174481)
|
|
State
|
10-Fix Delivered,
request for enhancement
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
|
|
Submit Date
|
18-FEB-2009
|
|
Description
|
Compressed oops broke AutoBox elimination because of DecodeN nodes in ideal graph.
AutoBox elimination optimization looks for Integer objects load from AutoBox cache array
in an ideal graph and expects LoadP nodes.
With compressed oops it gets DecodeN( LoadN ) instead of LoadP.
Posted Date : 2009-02-18 18:21:03.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/5d75ab5f6698
Posted Date : 2009-02-19 01:25:51.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |