6807084: AutoBox elimination is broken with compressed oops

Add checks for DecodeN nodes into AutoBox elimination code.

Reviewed-by: never